[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/unispace/unispace bd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/unispace/unispace rg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/map.gd" type="Script" id=3]
[ext_resource path="res://assets/placeHolders/Map.png" type="Texture" id=4]
[ext_resource path="res://themes/HistoryButton-theme.tres" type="Theme" id=5]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[node name="map" type="CanvasLayer"]
layer = 5
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 100.0
margin_left = -2.0
margin_right = -97242.0
margin_bottom = 7210.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="margin" type="MarginContainer" parent="TextureRect"]
margin_left = 43.0
margin_top = 384.0
margin_right = 1119.0
margin_bottom = 1065.0
rect_scale = Vector2( 10, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/margin"]
margin_right = 1076.0
margin_bottom = 700.0

[node name="topBanner" type="HBoxContainer" parent="TextureRect/margin/VBoxContainer"]
margin_right = 1076.0

[node name="titleContainer" type="CenterContainer" parent="TextureRect/margin/VBoxContainer"]
margin_top = 4.0
margin_right = 1076.0
margin_bottom = 53.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/margin/VBoxContainer/titleContainer"]
margin_left = 502.0
margin_right = 574.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="TextureRect/margin/VBoxContainer/titleContainer/VBoxContainer"]
modulate = Color( 0.623529, 0.0588235, 0.85098, 1 )
margin_right = 72.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Map"
align = 1
max_lines_visible = 100

[node name="buttonMargin" type="MarginContainer" parent="TextureRect/margin"]
margin_right = 440.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 700 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="TextureRect/margin/buttonMargin"]
margin_right = 440.0
margin_bottom = 700.0

[node name="TextureRect" type="TextureRect" parent="TextureRect/margin/buttonMargin/CenterContainer"]
margin_left = 220.0
margin_top = 350.0
margin_right = 220.0
margin_bottom = 350.0

[node name="VBoxButtonsContainer" type="VBoxContainer" parent="TextureRect/margin/buttonMargin/CenterContainer"]
margin_top = 154.0
margin_right = 440.0
margin_bottom = 546.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="BarBtn" type="Button" parent="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer"]
margin_right = 440.0
margin_bottom = 95.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Bar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DinerBtn" type="Button" parent="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer"]
margin_top = 99.0
margin_right = 440.0
margin_bottom = 194.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Diner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GarageBtn" type="Button" parent="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer"]
margin_top = 198.0
margin_right = 440.0
margin_bottom = 293.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Garage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonD" type="Button" parent="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer"]
margin_top = 297.0
margin_right = 440.0
margin_bottom = 392.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Location D"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer/BarBtn" to="." method="_on_BarBtn_pressed"]
[connection signal="pressed" from="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer/DinerBtn" to="." method="_on_DinerBtn_pressed"]
[connection signal="pressed" from="TextureRect/margin/buttonMargin/CenterContainer/VBoxButtonsContainer/GarageBtn" to="." method="_on_GarageBtn_pressed"]
